# clay

./: .env.example  .gitignore  .mise.toml  AGENTS.md  Makefile  README.md  compose.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_e2_ingestion_baseline.py  0002_convert_market_tables_to_hypertables.py  0005_add_knowledge_base.py  0006_add_validation_lab.py  0008_ops_runtime_state.py  0009_context_unique_dedup.py  0010_e2_source_in_identity.py  0011_ops_retention_indexes.py  0013_create_missing_indexes.py  0014_hypertable_indexes.py  0015_ai_agent_runs.py
backend/scripts/: seed_demo_signal_data.py
backend/src/clay/: bootstrap.py
backend/tests/: conftest.py
backend/tests/ai_control/: test_ai_control_persistence.py  test_ai_control_service.py  test_routing_client.py  test_runner.py
backend/tests/alpha/: test_alpha_readiness_service.py
backend/tests/api/: test_ai_control_api.py  test_configs_api.py  test_control_center_api.py  test_control_center_stream.py  test_demo_trading_api.py  test_events_api.py  test_health_api.py  test_ingestion_api.py  test_ingestion_route.py  test_knowledge_api.py  test_knowledge_stream.py  test_lifespan.py  test_reliability_api.py  test_runtime_api.py  test_services_api.py  test_session_control_api.py  test_signals_api.py  test_validation_lab_api.py  test_validation_lab_stream.py  test_workspace_api.py
backend/tests/config/: test_loader.py
backend/tests/core/: test_logging.py
backend/tests/db/: test_ingestion_repositories.py  (+4 more)
(+285 files in other folders)
