[project]
name = "clay-backend"
version = "0.1.0"
description = "Local control plane for Clay"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "alembic>=1.14,<2.0",
  "apscheduler>=3.10,<4.0",
  "fastapi>=0.115,<0.116",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "asgi-lifespan>=2.0,<3.0",
  "httpx>=0.27,<0.28",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clay"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
